// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`req.js format[flow]} 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module.exports = 0;

=====================================output=====================================
module.exports = 0;

================================================================================
`;

exports[`test.js format[flow]} 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var x = require('./req');
(x: string);

import x from './req';

=====================================output=====================================
var x = require("./req");
(x: string);

import x from "./req";

================================================================================
`;

exports[`test.js format[flow]} 2`] = `
"Identifier 'x' is already declared (4:7)
  2 | (x: string);
  3 |
> 4 | import x from './req';
    |       ^
  5 |
Cause: Identifier 'x' is already declared (4:7)
import x from './req';
       ^
note: previous declaration (1:4)
var x = require('./req');
    ^"
`;
